--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.17",
+    "emailjs": "^5.0.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
